<resources>
    <string name="app_name">GPDP</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="beneficiary_code">Beneficiary code</string>
    <string name="surveyor_code">Surveyor code</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logging_you_in">Logging you in</string>
    <string name="district">District</string>
    <string name="gp_vc">GP/VC</string>
    <string name="block">Block</string>
    <string name="subdivision">Subdivision</string>
    <string name="colon">:</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="gp_vc_type">GP/VC type</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enter_beneficiary_code">Enter beneficiary code</string>
    <string name="or">OR</string>
    <string name="basic_info">1. Basic info</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="details_of_family_members">2. Details of family members</string>
    <string name="error_message">We could not sync your entry to our servers. A local backup has been created</string>
    <string name="sync_failed_multiple_files">We could not sync your entries to our servers. Please try again later.</string>
    <string name="sync_successful_multiple_files">All entries synced successfully.</string>
    <string name="dismiss">DISMISS</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="app_version">2.3.2.5</string>
    <string name="ok">OK</string>
</resources>
